# mottle

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  Dockerfile  Makefile  README.md  codecov.yml  compose-prod.yaml  compose.dev.yaml  compose.prod.yaml  compose.yml  crontab  desc.md  docker-compose.yml  manage.py  precommit_mypy_deps_update  pyproject.toml  release.sh  reloader
.github/: dependabot.yml
.github/workflows/: build.yml
django_q_sentry/: README.md  sentry.py
featureflags/: data.py  models.py
featureflags/management/commands/: create_feature_flag.py
featureflags/migrations/: 0001_initial.py
mottle/: asgi.py  db_routers.py  hosts.py  logging.py  settings.py  urls.py  views.py  wsgi.py
scheduler/: jobs.py  run.py
taskrunner/: run.py  schedules.py  tasks.py
tests/: conftest.py  test_data.py  test_models.py  test_utils.py  test_views_utils.py  test_web_utils.py
tests/golden/: event_updates_email.html  playlist_updates_email.html
tests/golden/event_updates_email/: html.html  plaintext.txt
tests/golden/playlist_updates_email/: html.html  plaintext.txt
urlshortener/: models.py  urls.py  views.py
urlshortener/migrations/: 0001_initial.py
web/: ai.py  apps.py  context_processors.py  data.py  email.py  event_changes.json  geolocation.py  images.py  jobs.py  metrics.py  middleware.py  models.py  signals.py  spotify.py  tasks.py  urls.py  utils.py  views.py  views_utils.py
web/events/: constants.py  data.py  enums.py  exceptions.py  http.py  utils.py
web/management/commands/: get_event_updates.py  get_playlist_updates.py  track_artists_events.py
web/migrations/: 0001_initial.py  0002_encrypt_tokens.py  0003_watch_playlists.py  0004_refactor_for_autoaccept.py  0005_watch_artists.py  0006_fix_playlistupdate_source_artist.py  0007_spotifyauth_token_scope.py  0008_events.py  0008_playlistupdate_unique_constraint.py  0009_events.py  0009_events.pyp  0010_geography_type_and_json.py  0010_user_settings.py
web/static/web/: htmx-toaster.js  map.js  map_event_location.js  mvp.css  script.js  style.css  tw.css
web/static/web/src/: style.css
web/templates/web/: album.html  albums.html  base.html  changelog.html  deduplicate.html  events.html  followed_artists.html  index.html  login.html  playlist.html  playlist_audio_features.html  playlist_updates.html  playlists.html  rename.html  saved_tracks.html  search.html  search_artists.html  search_playlists.html  settings.html  user_events.html
web/templates/web/email/: event_updates.html  playlist_updates.html
web/templates/web/forms/: login.html  playlist_create.html  search_artists.html
web/templates/web/icons/: accept.html  add.html  audio_features.html  auto_update.html  calendar.html  copy.html  delete.html  edit.html  find_duplicates.html  follow.html  globe.html  image.html  info.html  merge.html  regenerate.html  reject.html  settings.html  ticket.html  tw_arrow_right.html  tw_arrow_right_sm.html  tw_calendar.html  tw_checkmark.html  tw_chevron_down.html  tw_chevron_up.html  tw_close.html  tw_cog.html  tw_copy.html  tw_duplicate.html  tw_duplicate_8.html  tw_edit.html  tw_empty_playlists.html  tw_hamburger.html  tw_home.html  tw_image.html  tw_login.html  tw_logout.html  tw_music_notes.html  tw_music_notes_8.html  tw_music_notes_empty.html  tw_play.html  (+17 more)
web/templates/web/modals/: event_details.html  playlist_configure.html  playlist_cover_image.html  playlist_discography.html  playlist_duplicates.html  playlist_merge.html  playlist_updates.html  playlist_watch.html  track_add_to_playlist.html
web/templates/web/parts/: accept.html  album_card.html  album_metadata_headers.html  artist_actions.html  artist_metadata_headers.html  artists.html  changelog.html  empty_state.html  event_row.html  events.html  footer.html  leafletjs.html  nav.html  playlist_actions.html  playlist_delete.html  playlist_follow.html  playlist_metadata_headers.html  playlist_name.html  playlist_rename.html  playlist_row.html  playlist_row_actions_my.html  playlist_row_actions_search.html  playlist_track_delete.html  playlist_unfollow.html  playlist_updates.html  playlists.html  saved_track_delete.html  search_results.html  settings.html
web/templates/web/tables/: albums.html  artist_row.html  artists.html  followed_artists.html  playlist_items.html  playlist_items_duplicate.html  playlist_row.html  playlist_row_deleted.html  playlists.html
web/templatetags/: tekore_model_extras.py
web/tests/: factories.py  test_jobs.py  test_models.py
