[tool.poetry]
name = "mottle"
version = "0.19.26"
description = "Missing spotify features"
authors = ["Andrii Yurchuk <ay@mntw.re>"]
readme = "README.md"
packages = [
  { include = "mottle" },
  { include = "web" },
  { include = "scheduler" },
  { include = "taskrunner" },
  { include = "manage.py" },
]

[tool.poetry.dependencies]
python = "^3.12"
django = "~5.0.3"
environs = "^11.0.0"
cryptography = "^43.0.1"
django-htmx = "^1.17.3"
daphne = "^4.1.0"
whitenoise = "^6.6.0"
sentry-sdk = { extras = ["django"], version = "^1.44.1" }
django-prometheus = "^2.3.1"
prometheus-client = "^0.20.0"
apscheduler = "^3.10.4"
openai = "^1.42.0"
pillow = "^10.4.0"
tiktoken = "^0.7.0"
tekore = { git = "https://github.com/ch00k/tekore" }
django-ipware = "^7.0.1"
django-q2 = "^1.7.3"
lxml = "^5.3.0"
thefuzz = "^0.22.1"
django-dirtyfields = "^1.9.3"
pytest-asyncio = "^0.24.0"
unidecode = "^1.3.8"

[tool.poetry.group.dev.dependencies]
mypy = "~1.11.0"
django-stubs = "~5.0.0"
factory-boy = "^3.3.0"
pytest = "^8.2.0"
pytest-django = "^4.8.0"

[tool.poetry.group.debug.dependencies]
ipython = "^8.24.0"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.extend-ignore = ["E203", "E402"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
  "tekore.*",
  "django_q.*",
  "apscheduler.*",
  "factory.*",
  "ruamel.*",
  "poetry.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "mottle.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mottle.settings"
django_debug_mode = "keep"
