[project]
name = "mottle"
version = "0.27.8"
description = "Some quality of life improvements for Spotify"
authors = [{ name = "Andrii Yurchuk", email = "ay@mntw.re" }]
license = { file = "LICENSE" }
readme = "README.md"
homepage = "https://mottle.it"
repository = "https://github.com/Ch00k/mottle"
requires-python = ">=3.12,<3.13"

dependencies = [
  "django==5.2.3",
  "environs==14.2.0",
  "cryptography==45.0.4",
  "django-htmx==1.23.0",
  "whitenoise==6.9.0",
  "sentry-sdk[django]==2.30.0",
  "django-prometheus==2.4.1",
  "prometheus-client==0.22.1",
  "openai==1.88.0",
  "pillow==12.0.0",
  "tiktoken==0.9.0",
  "django-q2==1.8.0",
  "lxml==5.4.0",
  "thefuzz==0.22.1",
  "django-dirtyfields==1.9.7",
  "unidecode==1.4.0",
  "country-converter==1.3",
  "json-log-formatter==1.1.1",
  "daphne==4.2.0",
  "django-hosts==6.0",
  "tekore==6.0.0",
  "croniter==6.0.0",
]

[dependency-groups]
dev = [
  "mypy==1.16.1",
  "django-stubs==5.2.7",
  "lxml-stubs==0.5.1",
  "factory-boy==3.3.3",
  "pytest==8.4.2",
  "pytest-asyncio==1.0.0",
  "pytest-django==4.11.1",
]
debug = ["ipython==9.6.0", "pdbpp==0.11.6"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",   # pydocstyle
  "FIX", # flake8-fixme
  "TD",  # flake8-todo
  "TRY", # tryceratops
  "SLF", # flake8-self

  "ANN401",  # Allow Any type
  "B023",    # Loop variable
  "BLE001",  # Bare Exception
  "C901",    # Complexity
  "COM812",  # Trailing comma
  "DJ001",   # Django-specific rule
  "EM101",   # Exception uses string literal
  "EM102",   # Exception uses f-string
  "ERA001",  # Commented out code
  "FBT001",  # Boolean argument
  "FBT002",  # Boolean argument
  "G004",    # Logging statement uses f-string
  "N818",    # Exception class name
  "PLR0911", # Too many return statements
  "PLR0912", # Too many branches
  "PLR0913", # Too many arguments
  "PLR2004", # Magic values
  "PLR0915", # Too many statements
  "RUF012",  # Mutable class attributes
  "S101",    # Use of assert
]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
  "tekore.*",
  "django_q.*",
  "django_hosts.*",
  "dirtyfields.*",
  "json_log_formatter.*",
  "thefuzz.*",
  "country_converter.*",
  "factory.*",
  "ruamel.*",
  "croniter.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "mottle.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mottle.settings"
django_debug_mode = "keep"
